# template

./: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: configure_app.py  server.py
core/: settings.py
core/cache/: base_types.py  connection.py
core/db/: session.py
migrations/: env.py
