[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["miko <islamimanhod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
redis = "^5.0.3"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
